[package]
name = "rust-proxy-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Production-ready async HTTP proxy server with rate limiting and connection pooling"
license = "MIT"
repository = "https://github.com/yourusername/rust-proxy-server"

[lib]
name = "proxy_server"
path = "src/lib.rs"

[[bin]]
name = "proxy-server"
path = "src/main.rs"

[[bin]]
name = "http-proxy-server"
path = "src/server_with_http.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "cookies"] }

# Futures & streams
futures = "0.3"
futures-util = "0.3"

# Service infrastructure
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP server (for examples)
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
tempfile = "3.0"

[[bench]]
name = "proxy_benchmark"
harness = false
